--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <a href="game.html">   
-
-        <button id="startButton">Start Spillet</button>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
+  <body>
+    <a href="game.html">
+      <button id="startButton">Start Spillet</button>
     </a>
-</body>
+  </body>
 </html>
